Bug 173776 - Dynamic playlist sometimes breaks and require a restart
Summary: Dynamic playlist sometimes breaks and require a restart
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (show other bugs)
Version: 2.0-SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
: 173252 175200 175216 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-10-28 18:52 UTC by Mikko C.
Modified: 2008-11-25 19:21 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikko C. 2008-10-28 18:52:38 UTC
Version:           2.0-SVN (using 4.1.71 (KDE 4.1.71 (KDE 4.2 >= 20081023)), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.28-rc2

After today's svn update it happened twice already.

For some reason the dynamic playlist completely breaks:

-No more tracks are appended, so it will eventually stop once it reaches the last track
-Repopulate doesn't work, this is what it prints:

amarok: BEGIN: void Dynamic::BiasedPlaylist::startSolver(bool)
amarok: END__: void Dynamic::BiasedPlaylist::startSolver(bool) - Took 0.0001s
amarok: BEGIN: void Playlist::DynamicTrackNavigator::appendUpcoming()
amarok:   [BiasedPlaylist] Requesting  10  tracks.
amarok: BEGIN: void Dynamic::BiasedPlaylist::startSolver(bool)
amarok: END__: void Dynamic::BiasedPlaylist::startSolver(bool) - Took 6.2e-05s
amarok: BEGIN: void Dynamic::BiasedPlaylist::startSolver(bool)
amarok: END__: void Dynamic::BiasedPlaylist::startSolver(bool) - Took 5.7e-05s
amarok: END__: void Playlist::DynamicTrackNavigator::appendUpcoming() - Took 0.0004s

-Disabling/re-enabling it doesn't work either.
-Both random and custom biases.

Only solution is to restart Amarok.
I will try investigating if it's reproducible.
Comment 1 Lydia Pintscher 2008-10-28 19:02:18 UTC
I can confirm this.
Happens here for at least a week already I'd say.
Comment 2 Seb Ruiz 2008-11-04 12:53:27 UTC
SVN commit 879928 by seb:

Fix a deadlock caused by leaving a mutex locked even when leaving the function. Caused the bias solver never to be able to run again, and populating the playlist would be blocked.
BUG: 173776


 M  +3 -1      ChangeLog  
 M  +1 -0      src/dynamic/BiasSolver.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=879928
Comment 3 Mikko C. 2008-11-06 21:20:14 UTC
It just happened again with rev 879997

I'll reopen this if it happens again.
Comment 4 Seb Ruiz 2008-11-06 23:01:09 UTC
Yep, just happened to me.
Comment 5 Mark Kretschmann 2008-11-15 11:32:54 UTC
*** Bug 175200 has been marked as a duplicate of this bug. ***
Comment 6 Mark Kretschmann 2008-11-15 14:34:42 UTC
*** Bug 175216 has been marked as a duplicate of this bug. ***
Comment 7 Matthias Adrian Mendler 2008-11-15 14:39:08 UTC
that 175216 duplicate was mine. sry, I was searching for bugs with the term 'collection' because it always happens after actualizing my collection.
Comment 8 Mikko C. 2008-11-15 14:41:13 UTC
(In reply to comment #7)
> that 175216 duplicate was mine. sry, I was searching for bugs with the term
> 'collection' because it always happens after actualizing my collection.
> 

By actualizing you mean rescanning?
And it always happens?
It also seems to happen after editing some track details and similar stuff related to the collection...
Comment 9 Mark Kretschmann 2008-11-16 14:31:59 UTC
*** Bug 173252 has been marked as a duplicate of this bug. ***
Comment 10 Mikko C. 2008-11-22 16:11:32 UTC
Any news? I hope this bug will be fixed before 2.0, dynamic playlist is a must for many people!!
One way of reproducing: just right-click on a track and choose "Show under various artists".
Repeat if it still doesn't break after the first time: it will break after 2-3 times for sure.
Comment 11 Daniel Caleb Jones 2008-11-23 03:49:09 UTC
SVN commit 887834 by djones:

Query makers should be allowed to be run multiple times!

Daniel, please make sure my patch is correct.

CCMAIL: dw@danielwinter.de
BUG: 173776


 M  +3 -3      SqlQueryMaker.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=887834
Comment 12 Thomas Kamps 2008-11-25 19:21:34 UTC
I just tried the issue and the bug seems not to be fixed. Probaly my openSuse build is too old (from 24th Nov.).

I will try a newer build.