Query makers should be allowed to be run multiple times!

Daniel, please make sure my patch is correct.

CCMAIL: dw@danielwinter.de
BUG: 173776

svn path=/trunk/extragear/multimedia/amarok/; revision=887834